src/modules/account/components/MaterialRequestDetailBlade/MaterialRequestConversation.module.scss
@use "../../../../styles/abstracts" as abstracts;

// Desktop
$rich-text-editor-height-desktop: 20rem; // rich text editor

// Mobile
$rich-text-editor-height-mobile: 14.7rem; // rich text editor

.p-material-request-detail__conversation{
	position: relative;
	height: 100%;
}

.p-conversation-messages {
	overflow: hidden;

	// Desktop
	&__message-wrapper {
		height: calc(100% - $rich-text-editor-height-desktop);
		overflow-y: scroll;
		padding: abstracts.$spacer-md;
	}

	// Mobile
	@media (max-width: abstracts.$breakpoint-md) {
		&__message-wrapper {
			height: calc(100% - $rich-text-editor-height-desktop);
			overflow-y: scroll;
			padding: abstracts.$spacer-sm;
		}
	}

	&__loading-more {
		display: flex;
		justify-content: center;
		padding: abstracts.$spacer-sm 0;
	}

	&__empty-state {
		&__text {
			text-align: center;
			color: abstracts.$grey;
			margin-bottom: abstracts.$spacer-sm;
		}
	}

	&__message {
		border-radius: abstracts.$spacer-sm;
		padding: abstracts.$spacer-sm;
		margin-top: abstracts.$spacer-xs;
		margin-bottom: abstracts.$spacer-sm;
		width: 66%;
		font-size: abstracts.$font-size-base;
		gap: abstracts.$spacer-xs;
		display: flex;
		flex-direction: column;

		@media (max-width: abstracts.$breakpoint-lg) {
			width: 80%;
		}

		&:last-child{
			margin-bottom: 0;
		}

		&--own {
			background-color: abstracts.$teal-medium;
			margin-left: auto;
			margin-right: 0;
		}

		&--other {
			background-color: abstracts.$platinum;
			margin-right: auto;
			margin-left: 0;
		}

		&--final {
			width: 100%;
			margin-left: 0;
			margin-right: 0;
		}

		&--system {
			background-color: transparent;
			border: 1px solid abstracts.$silver;
		}

		&__sender {
			font-weight: abstracts.$font-weight-bold;
			font-size: abstracts.$font-size-md;
		}

		&__body {
			margin-top: abstracts.$spacer-xxs;

			&--status-motivation {
				font-style: italic;
				margin-top: abstracts.$spacer-xs;
			}

			&--expired {
				font-weight: abstracts.$font-weight-bold;
			}

			&--download-expired {
				font-weight: abstracts.$font-weight-bold;
			}

			&--download-expired-subtext {
				font-style: italic;
			}
		}

		&__download-button {
			margin-top: abstracts.$spacer-sm;
		}

		&__download-expiration {
			display: inline-flex;
			margin-top: abstracts.$spacer-sm;
			color: abstracts.$grey;
			font-style: italic;
			gap: abstracts.$spacer-xxs;
			line-height: abstracts.$line-height-md;
		}

		&-attachments {
			display: flex;
			flex-wrap: wrap;
			gap: abstracts.$spacer-xs;
		}

		&__attachment {
			background-color: abstracts.$white;
			border: 1px solid abstracts.$silver;
			border-radius: abstracts.$spacer-xs;
			padding: abstracts.$spacer-sm abstracts.$spacer-sm;
			display: inline-flex;
			flex-direction: column;
			gap: abstracts.$spacer-xs;
			width: fit-content;
			text-decoration: none;
			min-width: 20%;
			white-space: pre-wrap;
			word-break: break-word;

			[class*="Icon_c-icon"] {
				font-size: abstracts.$font-size-lg !important;
				margin-left: -4px; // left align icon to text
			}

			&:hover {
				background-color: abstracts.$platinum;
				border: 1px solid abstracts.$zinc;
			}
		}
	}

	&__editor {
		height: $rich-text-editor-height-desktop;
		padding: 0 abstracts.$spacer-sm;
		position: relative;
		overflow: visible;

		:global(.c-rich-text-editor) {
			height: $rich-text-editor-height-desktop;

			:global(.bf-container) {
				display: flex;
				flex-direction: column;
			}

			:global(.bf-controlbar) {
				background-color: abstracts.$platinum;
				border: 1px solid abstracts.$silver;
				border-radius: abstracts.$spacer-xs abstracts.$spacer-xs 0 0;

				&::before {
					display: none;
				}

				:global(.separator-line) {
					border: 1px solid abstracts.$silver;
				}

				// Focus styles for toolbar buttons
				:global(.control-item.button),
				:global(.control-item.dropdown),
				:global(.dropdown-handler) {
					@include abstracts.focus-outline;

					&:focus-visible {
						border-radius: 2px;
					}
				}
			}

			:global(.bf-content) {
				border: 1px solid abstracts.$silver !important;
				border-radius: 0 0 abstracts.$spacer-xs abstracts.$spacer-xs;
			}
		}

		// Keyboard open on mobile: move toolbar to bottom
		&--keyboard-open {
			@media (max-width: abstracts.$breakpoint-md) {
				:global(.c-rich-text-editor) {
					:global(.bf-container) {
						flex-direction: column-reverse;
					}

					:global(.bf-controlbar) {
						border-radius: 0 0 abstracts.$spacer-xs abstracts.$spacer-xs;
						margin-bottom: 1rem;
					}

					:global(.bf-content) {
						border-radius: abstracts.$spacer-xs abstracts.$spacer-xs 0 0;
					}
				}
			}
		}

		&--disabled {
			:global(.control-item.button),
			:global(.control-item.dropdown),
			:global(.dropdown-handler) {
				pointer-events: none !important;
				opacity: 0.5 !important;
			}
		}

		&__send-button {
			position: absolute;
			right: 1.8rem;
			bottom: 1.6rem;
			padding: 1rem;
			z-index: 3;

			@include abstracts.focus-outline;

			// Mobile
			@media (max-width: abstracts.$breakpoint-md) {
				right: 1.4rem;
				bottom: 2rem;
			}
		}

		// When keyboard is open, move send button lower
		&--keyboard-open &__send-button {
			@media (max-width: abstracts.$breakpoint-md) {
				bottom: 0.4rem;
			}
		}
	}

	&__selected-files {
		position: absolute;
		bottom: 100%;
		left: 0;
		right: 0;
		padding: abstracts.$spacer-md abstracts.$spacer-sm 2px;
		background: linear-gradient(to bottom, transparent, abstracts.$white 2rem);
		margin-right: 2rem; // Leave space for scrollbar

		&:empty {
			display: none;
		}
	}
}

